--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Index3.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Index3.cshtml
@@ -51,33 +51,7 @@
         $("#btn_guardar").disabled = false;
     }
 
-    function seleccionar_aprobacion() {
-        var datos = {
-            Ids: selectedIDs
-        }
-        $("#btn_guardar").disabled = true;
-        $.ajax({
-            type: 'POST',
-            data: JSON.stringify(datos),
-            url: '@Url.Action("seleccionar_aprobacion","Deudas", new { Area = "CuentasPorPagar" })',
-            async: false,
-            bDeferRender: true,
-            bProcessing: true,
-            dataType: 'json',
-            contentType: 'application/json; charset=utf-8',
-            success: function (data) {
-
-                $("#myform").submit();
-                GridView_aprobacion_facturas.PerformCallback();
-                $("#fac_con_saldo").modal("hide");
-
-            },
-            error: function (error) {
-            }
-        });
-        $("#btn_guardar").disabled = false;
-    }
-
+   
     
 </script>
 
@@ -95,7 +69,7 @@
     
     <div class="row">
         <div class="col-md-12">
-            <button type="button" class="btn btn-primary" onclick="fac_con_saldo()">Buscar
+            <button type="button" class="btn btn-primary" onclick="fac_con_saldo()">
                 <i class="fa fa-search"></i>
             </button>
         </div>
@@ -132,3 +106,32 @@
 
 
 
+<script type="text/javascript">
+    function seleccionar_aprobacion() {
+        var datos = {
+            Ids: selectedIDs
+        }
+        $("#btn_guardar").disabled = true;
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("seleccionar_aprobacion","Deudas", new { Area = "CuentasPorPagar" })',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+
+                $("#myform").submit();
+                GridView_aprobacion_facturas.PerformCallback();
+                $("#fac_con_saldo").modal("hide");
+
+            },
+            error: function (error) {
+            }
+        });
+        $("#btn_guardar").disabled = false;
+    }
+
+</script>
