--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Nuevo.cshtml
@@ -783,7 +783,8 @@
             success: function (data) {
                 if (data == '') {
                     //No hago nada
-                } else {
+                } else
+                {
                     $("#link_general").click();
                     if (data.tp_EsCombo == "S") {
                         $("#link_composicion").show();
