--- a/ERP/Core.Erp.Web/Areas/Banco/Views/TalonarioChequeBanco/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/TalonarioChequeBanco/Nuevo.cshtml
@@ -84,9 +84,17 @@
     }
 }
 <script>
-        $(function () {
+    $(function () {
+
+        get_id();
+        set_documentofinal();
+
+        $("#Num_cheque").change(function () {
+            set_documentofinal();
+        });
             $("#IdBanco").change(function () {
                 get_id();
+                set_documentofinal();
             });
             $("#Cantidad").change(function () {
                 set_documentofinal();
@@ -94,6 +102,8 @@
             $("#Documentofinal").change(function () {
                 set_documentofinal();
             });
+
+
         });
 
     function get_id(){
@@ -125,6 +135,7 @@
             var doc_inicial = Number($("#Num_cheque").val());
 
             var docfinal = "" + (doc_inicial + cantidad - 1)
+            var docf = "" + (doc_inicial)
             var id = $("#IdBanco").val();
 
             var datos = {
@@ -143,7 +154,10 @@
             success: function (data) {
                 var pad = data;
                 var doc = pad.substring(0, pad.length - docfinal.length) + docfinal;
+                var df = pad.substring(0, pad.length - docf.length) + docf;
+                
                 $("#Documentofinal").val(doc);
+                $("#Num_cheque").val(df);
             },
             error: function (error) {
             }
