--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/CobranzaRetenciones/AplicarRetencion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/CobranzaRetenciones/AplicarRetencion.cshtml
@@ -104,19 +104,19 @@
             <div class="col-md-2">
                 <div class="form-group">
                     <label for="vt_Subtotal">Subtotal</label>
-                    @Html.TextBoxFor(q => q.vt_Subtotal, "{0:N2}", new { @class = "form-control", @id = "vt_Subtotal", @readonly = "readonly" })
+                    @Html.TextBoxFor(q => q.vt_Subtotal,  new { @class = "form-control", @id = "vt_Subtotal", @readonly = "readonly" })
                 </div>
             </div>
             <div class="col-md-2">
                 <div class="form-group">
                     <label for="vt_Iva">I.V.A.</label>
-                    @Html.TextBoxFor(q => q.vt_Iva, "{0:N2}", new { @class = "form-control", @id = "vt_Iva", @readonly = "readonly" })
+                    @Html.TextBoxFor(q => q.vt_Iva, new { @class = "form-control", @id = "vt_Iva", @readonly = "readonly" })
                 </div>
             </div>
             <div class="col-md-2">
                 <div class="form-group">
                     <label for="vt_Total">Total</label>
-                    @Html.TextBoxFor(q => q.vt_Total, "{0:N2}", new { @class = "form-control", @id = "vt_Total", @readonly = "readonly" })
+                    @Html.TextBoxFor(q => q.vt_Total,  new { @class = "form-control", @id = "vt_Total", @readonly = "readonly" })
                 </div>
             </div>
         </div>
