--- a/ERP/Core.Erp.Web/Areas/Banco/Views/TalonarioChequeBanco/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/TalonarioChequeBanco/Modificar.cshtml
@@ -33,7 +33,7 @@
             <div class="col-md-4">
                 <div class="form-group">
                     <label for="Estado_bool">Número de cheque*</label>
-                    @Html.TextBoxFor(q => q.Num_cheque, new { @class = "form-control", @id = "Num_cheque" , @disabled="disabled"})
+                    @Html.TextBoxFor(q => q.Num_cheque, new { @class = "form-control", @id = "Num_cheque" , @readonly="readonly"})
                     @Html.ValidationMessageFor(q => q.Num_cheque, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -52,6 +52,7 @@
             </div>
         </div>
     </div>
+
 
     <div class="box-footer">
         <button type="submit" class="btn btn-primary">Guardar</button>
