--- a/ERP/Core.Erp.Web/Areas/Banco/Views/TalonarioChequeBanco/_GridViewPartial_talonario_cheque.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/TalonarioChequeBanco/_GridViewPartial_talonario_cheque.cshtml
@@ -58,14 +58,9 @@
             c.Caption = "#";
             c.SetDataItemTemplateContent(tc =>
             {
-                if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
-                {
-                    ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdBanco = DataBinder.Eval(tc.DataItem, "IdBanco"), Num_cheque = DataBinder.Eval(tc.DataItem, "Num_cheque") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdBanco = DataBinder.Eval(tc.DataItem, "IdBanco"), Num_cheque = DataBinder.Eval(tc.DataItem, "Num_cheque") },
-                            new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
+                ViewContext.Writer.Write(
+                Html.ActionLink("Modificar", "Modificar", new { IdBanco = DataBinder.Eval(tc.DataItem, "IdBanco"), Num_cheque = DataBinder.Eval(tc.DataItem, "Num_cheque") })
                     );
-                }
             });
             c.SetHeaderTemplateContent(tc =>
             {
@@ -75,12 +70,13 @@
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
             c.Settings.AllowSort = DefaultBoolean.False;
-            c.Width = Unit.Pixel(150);
+            c.Width = Unit.Pixel(100);
         });
-        
-        settings.Columns.Add("IdBanco", "Código").Width = Unit.Percentage(10);
-        settings.Columns.Add("Num_cheque", "Número cheque").Width = Unit.Percentage(50);
-        settings.Columns.Add("Estado", "Estado").Width = Unit.Percentage(10);
+
+        settings.Columns.Add("IdBanco", "Código").Width = Unit.Percentage(8);
+        settings.Columns.Add("ba_descripcion", "Descripción").Width = Unit.Percentage(30);
+        settings.Columns.Add("Num_cheque", "Número cheque").Width = Unit.Percentage(20);
+        settings.Columns.Add("Estado", "Estado").Width = Unit.Percentage(8);
     });
 }
 @grid.Bind(Model).GetHtml()
