--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Retencion/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Retencion/Nuevo.cshtml
@@ -154,7 +154,7 @@
                     <a href="#tab_detalle" aria-controls="detalle" role="tab" data-toggle="tab">Detalle retención</a>
                 </li>
                 <li>
-                    <a href="#tab_diario_contable" aria-controls="diario_contable" role="tab" data-toggle="tab">Diario contable</a>
+                    <a href="#tab_diario_contable" aria-controls="diario_contable" role="tab" data-toggle="tab" onclick="llamar_partial();">Diario contable</a>
                 </li>
 
             </ul>
