--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/OrdenPago/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/OrdenPago/Index.cshtml
@@ -6,7 +6,7 @@
     {
         Response.Redirect("~/Account/Login");
     }
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Layout/_LayoutConsulta.cshtml";
 }
 
 @using (Html.BeginForm())
