--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/OrdenPago/_GridViewPartial_ordenes_pagos.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/OrdenPago/_GridViewPartial_ordenes_pagos.cshtml
@@ -64,9 +64,7 @@
                 {
 
                     ViewContext.Writer.Write(
-                    Html.ActionLink("Modificar", "Modificar", new { IdOrdenPago = DataBinder.Eval(tc.DataItem, "IdOrdenPago") },
-
-                    new { onclick = "return Validar('" + DataBinder.Eval(tc.DataItem, "IdOrdenPago") + "');" }
+                    Html.ActionLink("Modificar", "Modificar", new { IdOrdenPago = DataBinder.Eval(tc.DataItem, "IdOrdenPago") }
 
 
                     ) + "&nbsp;" +
@@ -128,35 +126,3 @@
     });
 }
 @grid.Bind(Model).GetHtml()
-
-<script>
-    function Validar(IdOrdenPago)
-    {
-        var datos = {
-            IdOrdenPago: IdOrdenPago
-            
-        }
-        $.ajax({
-            type: 'POST',
-            data: JSON.stringify(datos),
-            url: '@Url.Action("ValidarOP", "OrdenPago", new { Area = "CuentasPorPagar" })',
-            async: false,
-            bDeferRender: true,
-            bProcessing: true,
-            dataType: 'json',
-            contentType: 'application/json; charset=utf-8',
-            success: function (data) {
-                if (data == "")
-                    return false
-                else {
-                    alert(data)
-                    return false;
-                }
-            },
-            error: function (error) {
-            }
-        });
-
-    };
-
-</script>
