--- a/ERP/Core.Erp.Web/Areas/Banco/Views/ChequeBanco/_GridViewPartial_cheque_op.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/ChequeBanco/_GridViewPartial_cheque_op.cshtml
@@ -50,6 +50,7 @@
             column.Caption = "Valor aprobado";
             column.PropertiesEdit.DisplayFormatString = "{0:N2}";
         });
+        settings.ClientSideEvents.EndCallback = "function(s,e){ armar_diario(); }";
     });
 }
 @grid.Bind(Model).GetHtml()
