--- a/ERP/Core.Erp.Web/Areas/Banco/Views/ChequeBanco/_GridViewPartial_cheque_op_x_cruzar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/ChequeBanco/_GridViewPartial_cheque_op_x_cruzar.cshtml
@@ -4,7 +4,7 @@
         settings.Name = "GridView_cheque_op_x_cruzar";
         settings.CallbackRouteValues = new { Controller = "ChequeBanco", Action = "GridViewPartial_cheque_op_x_cruzar" };
         settings.Width = Unit.Percentage(100);
-        settings.KeyFieldName = "IdOrdenPago";
+        settings.KeyFieldName = "IdOrdenPago_op";
 
         settings.SettingsPager.Visible = true;
         settings.Settings.ShowGroupPanel = false;
