--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Nuevo.cshtml
@@ -189,7 +189,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="form-group">
-                            <label for="em_lugarNacimiento">Luar nacimiento*</label>
+                            <label for="em_lugarNacimiento">Lugar nacimiento*</label>
                             @Html.TextBoxFor(q => q.em_lugarNacimiento, new { @class = "form-control" })
                             @Html.ValidationMessageFor(q => q.em_lugarNacimiento, "", new { @class = "text-danger" })
                         </div>
