--- a/ERP/Core.Erp.Web/Areas/Banco/Views/ChequeBanco/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/ChequeBanco/Nuevo.cshtml
@@ -15,13 +15,20 @@
             autoclose: true
         })
         $("#IdBanco").change(function () {
+            GetNumCheque();
             armar_diario();
         });
+        $("#IdTipo_Persona").change(function () {
+            vaciar_detalles();
+            IdEntidad.SetValue(0);
+            $("#cb_giradoA").val("");
+        });
+        GetNumCheque();
     });
     var selectedIDs;
     function OnBeginCallback(s, e) {
         e.customArgs["TipoPersona"] = $("#IdTipo_Persona").val();
-        e.customArgs["IdEntidad"] = IdEntidad.GetValue();
+        e.customArgs["Entidad"] = IdEntidad.GetValue();
         e.customArgs["selectedIDs"] = selectedIDs;
     }
     function OnSelectionChanged(s, e) {
@@ -83,12 +90,54 @@
             error: function (error) {
             }
         });
-        
+    }
+
+    function vaciar_detalles() {
+        var datos = {
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("vaciar_detalle", "ChequeBanco",new { Area = "Banco"})',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {                                
+            },
+            error: function (error) {
+            }
+        });
+        GridView_comprobante_detalle.PerformCallback();
+        GridView_cheque_op.PerformCallback();
+    }
+
+    function GetNumCheque() {
+        var datos = {
+            IdBanco: $("#IdBanco").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("GetNumCheque", "ChequeBanco",new { Area = "Banco"})',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                $("#cb_Cheque").val(data);
+            },
+            error: function (error) {
+            }
+        });
     }
 </script>
 
 @using (Html.BeginForm("Nuevo", "ChequeBanco", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
+    @Html.HiddenFor(q=>q.IdEmpresa)
     <div class="modal fade" id="OpModal" role="dialog">
         <div class="modal-dialog modal-lg">
             <!-- Modal content-->
@@ -117,7 +166,7 @@
                     @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_Descripcion"), new { @class = "form-control" })
                     @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
                 </div>
-            </div>            
+            </div>
             <div class="col-md-offset-7 col-md-2">
                 <div class="form-group">
                     <label for="cb_Fecha">Fecha:*</label>
@@ -178,14 +227,14 @@
                             @Html.DropDownListFor(q => q.cb_ciudadChq, new SelectList(ViewBag.lst_ciudad, "IdCiudad", "Descripcion_Ciudad"), new { @class = "form-control", @id = "cb_ciudadChq" })
                             @Html.ValidationMessageFor(q => q.cb_ciudadChq, "", new { @class = "text-danger" })
                         </div>
-                    </div>  
+                    </div>
                     <div class="col-md-9">
                         <div class="form-group">
                             <label for="cb_giradoA">Girado a:*</label>
                             @Html.TextBoxFor(q => q.cb_giradoA, new { @class = "form-control", @id = "cb_giradoA" })
                             @Html.ValidationMessageFor(q => q.cb_giradoA, "", new { @class = "text-danger" })
                         </div>
-                    </div>                
+                    </div>
                 </div>
             </div>
 
@@ -216,13 +265,17 @@
                 @Html.Action("GridViewPartial_cheque_op")
             </div>
 
-            <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_diario">                
-                   @Html.Action("GridViewPartial_comprobante_detalle", new { Area = "Contabilidad", Controller = "ComprobanteContable" })
+            <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_diario">
+                @Html.Action("GridViewPartial_comprobante_detalle", new { Area = "Contabilidad", Controller = "ComprobanteContable" })
             </div>
         </div>
     </div>
 
-    
-
-                
+    <div class="box-footer">
+        <button type="submit" class="btn btn-primary">Guardar</button>
+        <a class="btn btn-default" href="@Url.Action("Index", "ChequeBanco", new { Area = "Banco" }, null)">Cancelar</a>
+    </div>
+    @section Scripts {
+        @Scripts.Render("~/bundles/jqueryval")
+    }
 }
