--- a/ERP/Core.Erp.Web/Areas/Banco/Views/TalonarioChequeBanco/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/TalonarioChequeBanco/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Talonarios";
+    ViewBag.Title = "Talonario de cheques";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
