--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/EgresoInventario/_CmbProducto_EgresoInventario.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/EgresoInventario/_CmbProducto_EgresoInventario.cshtml
@@ -9,7 +9,7 @@
         settings.CallbackRouteValues = new { Controller = "EgresoInventario", Action = "CmbProducto_EgresoInventario", Area = "Inventario" };
         settings.Properties.CallbackPageSize = 15;
         settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.Contains;
-        settings.Properties.TextField = "pe_nombreCompleto";
+        settings.Properties.TextField = "pr_descripcion";
         settings.Properties.TextFormatString = "[{1}] {2}";
         settings.Properties.ValueField = "IdProducto";
         settings.Properties.ValueType = typeof(decimal);
@@ -18,9 +18,10 @@
         settings.Properties.Columns.Add("pr_codigo", "Código", 10);
         settings.Properties.Columns.Add("pr_descripcion", "Producto", 80);
 
-   })
-    .BindList(new Core.Erp.Web.Areas.Inventario.Controllers.EgresoInventarioController().get_list_bajo_demanda, new Core.Erp.Web.Areas.Inventario.Controllers.EgresoInventarioController().get_info_bajo_demanda)
-    .Bind(Model.IdEntidad);
+    })
+    .BindList(new Core.Erp.Web.Areas.Inventario.Controllers.EgresoInventarioController().get_list_bajo_demanda,
+    new Core.Erp.Web.Areas.Inventario.Controllers.EgresoInventarioController().get_info_bajo_demanda)
+    .Bind(Model.IdProducto);
 
 }
 @comboBox.GetHtml()
