--- a/ERP/Core.Erp.Web/Areas/Banco/Views/NotaDeDebitoBanco/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/NotaDeDebitoBanco/Index.cshtml
@@ -81,7 +81,7 @@
             </div>
         </div>
         <div class="box-body">
-            @Html.Action("GridViewPartial_cheque", new { Fecha_ini = Model.fecha_ini, Fecha_fin = Model.fecha_fin, IdSucursal = Model.IdSucursal })
+            @Html.Action("GridViewPartial_DebitoBanco", new { Fecha_ini = Model.fecha_ini, Fecha_fin = Model.fecha_fin, IdSucursal = Model.IdSucursal })
         </div>
         <!-- /.box-body -->
         <div class="box-footer">
