--- a/ERP/Core.Erp.Web/Areas/Banco/Views/NotaDeDebitoBanco/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/NotaDeDebitoBanco/Nuevo.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.Banco.ba_Cbte_Ban_Info
 @{
-    ViewBag.Title = "Nuevo cheque";
+    ViewBag.Title = "Nuevo débito";
     Layout = "~/Views/Shared/_Layout.cshtml";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
@@ -15,15 +15,8 @@
             autoclose: true
         })
         $("#IdBanco").change(function () {
-            GetNumCheque();
             armar_diario();
         });
-        $("#IdTipo_Persona").change(function () {
-            vaciar_detalles();
-            IdEntidad.SetValue(0);
-            $("#cb_giradoA").val("");
-        });
-        GetNumCheque();
     });
     var selectedIDs;
     function OnBeginCallback(s, e) {
@@ -40,8 +33,8 @@
     }
     function MostrarModal() {
         selectedIDs = "";
-        GridView_cheque_op_x_cruzar.PerformCallback();
-        GridView_cheque_op_x_cruzar.UnselectRows();
+        GridView_DebitoBanco_op_x_cruzar.PerformCallback();
+        GridView_DebitoBanco_op_x_cruzar.UnselectRows();
         $("#OpModal").modal("show");
     }
 
@@ -52,7 +45,7 @@
         $.ajax({
             type: 'POST',
             data: JSON.stringify(datos),
-            url: '@Url.Action("EditingAddNew", "ChequeBanco",new { Area = "Banco"})',
+            url: '@Url.Action("EditingAddNew", "NotaDeDebitoBanco",new { Area = "Banco"})',
             async: false,
             bDeferRender: true,
             bProcessing: true,
@@ -64,9 +57,9 @@
             }
         });
         selectedIDs = "";
-        GridView_cheque_op_x_cruzar.PerformCallback();
-        GridView_cheque_op_x_cruzar.UnselectRows();
-        GridView_cheque_op.PerformCallback();
+        GridView_DebitoBanco_op_x_cruzar.PerformCallback();
+        GridView_DebitoBanco_op_x_cruzar.UnselectRows();
+        GridView_DebitoBanco_op.PerformCallback();
         $("#OpModal").modal("hide");
     }
 
@@ -104,7 +97,7 @@
             bProcessing: true,
             dataType: 'json',
             contentType: 'application/json; charset=utf-8',
-            success: function (data) {                                
+            success: function (data) {
             },
             error: function (error) {
             }
@@ -135,9 +128,9 @@
     }
 </script>
 
-@using (Html.BeginForm("Nuevo", "ChequeBanco", FormMethod.Post, new { @class = "form", @role = "form" }))
+@using (Html.BeginForm("Nuevo", "NotaDeDebitoBanco", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
-    @Html.HiddenFor(q=>q.IdEmpresa)
+    @Html.HiddenFor(q => q.IdEmpresa)
     <div class="modal fade" id="OpModal" role="dialog">
         <div class="modal-dialog modal-lg">
             <!-- Modal content-->
@@ -147,7 +140,7 @@
                     <h4 class="modal-title">Ordenes de pago</h4>
                 </div>
                 <div class="modal-body">
-                    @Html.Action("GridViewPartial_cheque_op_x_cruzar")
+                    @Html.Action("GridViewPartial_DebitoBanco_op_x_cruzar")
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-primary" onclick="AddOP();">Aceptar</button>
@@ -167,7 +160,14 @@
                     @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-offset-7 col-md-2">
+            <div class="col-md-3">
+                <div class="form-group">
+                    <label for="IdTipoNota">Tipo de nota:*</label>
+                    @Html.DropDownListFor(q => q.IdTipoNota, new SelectList(ViewBag.lst_tipo_nota, "IdTipoNota", "Descripcion"), new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.IdTipoNota, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-offset-4 col-md-2">
                 <div class="form-group">
                     <label for="cb_Fecha">Fecha:*</label>
                     <div class="input-group date">
@@ -182,13 +182,26 @@
         </div>
     </div>
 
+    <div class="row">
+        <div class="col-md-6">
+            <div class="form-group">
+                <label for="IdBanco">Cuenta bancaria:*</label>
+                @Html.DropDownListFor(q => q.IdBanco, new SelectList(ViewBag.lst_banco_cuenta, "IdBanco", "ba_descripcion"), new { @class = "form-control", @id = "IdBanco" })
+                @Html.ValidationMessageFor(q => q.IdBanco, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="col-md-2">
+            <div class="form-group">
+                <label for="cb_Valor">Valor</label>
+                @Html.TextBoxFor(q => q.cb_Valor, new { @id = "cb_Valor", @class = "form-control", @readonly = "readonly" })
+            </div>
+        </div>
+    </div>
+
 
     <div id="Tabs" role="tabpanel">
         <ul class="nav nav-tabs" role="tablist">
             <li class="active">
-                <a href="#tab_cheque" aria-controls="facturas" role="tab" data-toggle="tab">Datos del cheque</a>
-            </li>
-            <li>
                 <a href="#tab_op" aria-controls="vales" role="tab" data-toggle="tab">Ordenes de pago</a>
             </li>
             <li>
@@ -196,48 +209,6 @@
             </li>
         </ul>
         <div class="tab-content" style="padding-top: 20px">
-            <div role="tabpanel" class="tab-pane active" style="margin-left: 1em;" id="tab_cheque">
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <label for="IdBanco">Cuenta bancaria:*</label>
-                            @Html.DropDownListFor(q => q.IdBanco, new SelectList(ViewBag.lst_banco_cuenta, "IdBanco", "ba_descripcion"), new { @class = "form-control", @id = "IdBanco" })
-                            @Html.ValidationMessageFor(q => q.IdBanco, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                    <div class="col-md-offset-2 col-md-2">
-                        <div class="form-group">
-                            <label for="cb_Cheque"># Cheque:*</label>
-                            @Html.TextBoxFor(q => q.cb_Cheque, new { @class = "form-control", @id = "cb_Cheque" })
-                            @Html.ValidationMessageFor(q => q.cb_Cheque, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                    <div class="col-md-2">
-                        <div class="form-group">
-                            <label for="cb_Valor">Valor</label>
-                            @Html.TextBoxFor(q => q.cb_Valor, new { @id = "cb_Valor", @class = "form-control", @readonly = "readonly" })
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-md-3">
-                        <div class="form-group">
-                            <label for="cb_ciudadChq">Ciudad:*</label>
-                            @Html.DropDownListFor(q => q.cb_ciudadChq, new SelectList(ViewBag.lst_ciudad, "IdCiudad", "Descripcion_Ciudad"), new { @class = "form-control", @id = "cb_ciudadChq" })
-                            @Html.ValidationMessageFor(q => q.cb_ciudadChq, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                    <div class="col-md-9">
-                        <div class="form-group">
-                            <label for="cb_giradoA">Girado a:*</label>
-                            @Html.TextBoxFor(q => q.cb_giradoA, new { @class = "form-control", @id = "cb_giradoA" })
-                            @Html.ValidationMessageFor(q => q.cb_giradoA, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                </div>
-            </div>
-
             <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_op">
                 <div class="row">
                     <div class="col-md-3">
@@ -249,7 +220,7 @@
                     <div class="col-md-9">
                         <div class="form-group">
                             <label for="IdEntidad">Beneficiario:*</label>
-                            @Html.Partial("_CmbPersona_ChequeBanco", Model)
+                            @Html.Partial("_CmbPersona_DebitoBanco", Model)
                             @Html.ValidationMessageFor(q => q.IdEntidad, "", new { @class = "text-danger" })
                         </div>
                     </div>
@@ -262,7 +233,7 @@
                     </div>
                 </div>
                 <br />
-                @Html.Action("GridViewPartial_cheque_op")
+                @Html.Action("GridViewPartial_DebitoBanco_op")
             </div>
 
             <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_diario">
@@ -273,7 +244,7 @@
 
     <div class="box-footer">
         <button type="submit" class="btn btn-primary">Guardar</button>
-        <a class="btn btn-default" href="@Url.Action("Index", "ChequeBanco", new { Area = "Banco" }, null)">Cancelar</a>
+        <a class="btn btn-default" href="@Url.Action("Index", "NotaDeDebitoBanco", new { Area = "Banco" }, null)">Cancelar</a>
     </div>
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
