--- a/ERP/Core.Erp.Web/Areas/Banco/Views/NotaDeDebitoBanco/_CmbPersona_DebitoBanco.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/NotaDeDebitoBanco/_CmbPersona_DebitoBanco.cshtml
@@ -6,7 +6,7 @@
         settings.Width = Unit.Percentage(100);
         settings.Properties.DropDownWidth = Unit.Percentage(100);
         settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-        settings.CallbackRouteValues = new { Controller = "ChequeBanco", Action = "CmbPersona_ChequeBanco", Area = "Banco" };
+        settings.CallbackRouteValues = new { Controller = "NotaDeDebitoBanco", Action = "CmbPersona_DebitoBanco", Area = "Banco" };
         settings.Properties.CallbackPageSize = 15;
         settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.Contains;
         settings.Properties.TextField = "pe_nombreCompleto";
@@ -21,7 +21,7 @@
         settings.Properties.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['IdTipoPersona'] = $('#IdTipo_Persona').val(); }";
         settings.Properties.ClientSideEvents.SelectedIndexChanged = "function(s,e) {$('#cb_giradoA').val(s.GetText()); vaciar_detalles();}";
     })
-    .BindList(new Core.Erp.Web.Areas.Banco.Controllers.ChequeBancoController().get_list_bajo_demanda, new Core.Erp.Web.Areas.Banco.Controllers.ChequeBancoController().get_info_bajo_demanda)
+    .BindList(new Core.Erp.Web.Areas.Banco.Controllers.NotaDeDebitoBancoController().get_list_bajo_demanda, new Core.Erp.Web.Areas.Banco.Controllers.NotaDeDebitoBancoController().get_info_bajo_demanda)
     .Bind(Model.IdEntidad);
 
 }
