--- a/ERP/Core.Erp.Web/Areas/Banco/Views/NotaDeDebitoBanco/_GridViewPartial_DebitoBanco.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/NotaDeDebitoBanco/_GridViewPartial_DebitoBanco.cshtml
@@ -1,8 +1,8 @@
 @using System.Web.UI.WebControls;
 @{
     var grid = Html.DevExpress().GridView(settings => {
-        settings.Name = "GridView_cheque";
-        settings.CallbackRouteValues = new { Controller = "ChequeBanco", Action = "GridViewPartial_cheque", Fecha_ini = ViewBag.Fecha_ini, Fecha_fin = ViewBag.Fecha_fin, IdSucursal = ViewBag.IdSucursal };
+        settings.Name = "GridView_DebitoBanco";
+        settings.CallbackRouteValues = new { Controller = "NotaDeDebitoBanco", Action = "GridViewPartial_DebitoBanco", Fecha_ini = ViewBag.Fecha_ini, Fecha_fin = ViewBag.Fecha_fin, IdSucursal = ViewBag.IdSucursal };
         settings.Width = Unit.Percentage(100);
         settings.KeyFieldName = "IdCbteCble";
 
@@ -75,10 +75,10 @@
             c.Settings.AllowSort = DefaultBoolean.False;
             c.Width = Unit.Pixel(150);
         });
-        settings.Columns.Add("Su_Descripcion", "Sucursal").Width = Unit.Percentage(20);
+        settings.Columns.Add("Su_Descripcion", "Sucursal").Width = Unit.Percentage(10);
         settings.Columns.Add("IdCbteCble", "ID").Width = Unit.Percentage(5);
-        settings.Columns.Add("cb_Cheque", "# Cheque").Width = Unit.Percentage(7);
-        settings.Columns.Add("cb_giradoA", "Beneficiario").Width = Unit.Percentage(30);
+        settings.Columns.Add("ba_descripcion", "Cuenta").Width = Unit.Percentage(30);
+        settings.Columns.Add("pe_nombreCompleto", "Beneficiario").Width = Unit.Percentage(30);
         settings.Columns.Add(column =>
         {
             column.FieldName = "cb_Fecha";
